# serverless-rust

./: .gitignore  Cargo.toml  README.md  cdk.json  package.json  pnpm-lock.yaml  tsconfig.json
lib/: cdk-utils.ts  person-service-rust-stack.ts
src/: response.rs
src/utils/: json.rs  response.rs
test/: person-service-rust.test.ts
